feat(assessment): 문제집 등록시 사용자 주도 나닝도 등록 제거